# pandoc-math

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy_website.yml  testing.yml
Usage/: index.html
Usage/filter/: index.html
docs/: about.md  index.md  installation.md
docs/Demo/: index.md
docs/Setup/: index.md
docs/Usage/: filter.md  index.md
docs/examples/: metadata.yaml
docs/examples/Example paper/: bibliography.bib  output.html  output2.html
examples/Example paper/: main.html  main.tex  output.html
installation/: index.html
pandoc-math/: __main__.py
pandocmath/: __init__.py  ams.py  filter.py
pandocmath/src/: __init__.py  filter.py  helper.py
src/pandocmath/: __init__.py  ams.py  latex_reader.py  pandocmath.py
tests/: test.html  tests.py  unit_test.py
tests/Example paper/: metadata.yaml
tests/files/: latex_reader_test.tex
